--- a/FrågesportNetCore/FrågesportNetCore.csproj
+++ b/FrågesportNetCore/FrågesportNetCore.csproj
@@ -49,6 +49,7 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="QuestionCard.cs" />
     <Compile Include="Quiz.cs" />
+    <Compile Include="UserInterface.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
