--- a/FrågesportNetCore/FrågesportNetCore.csproj
+++ b/FrågesportNetCore/FrågesportNetCore.csproj
@@ -44,6 +44,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Deck.cs" />
+    <Compile Include="FileManager.cs" />
     <Compile Include="MCSACard.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
