4131 WPF Filhantering - User can now add questions to the quiz through the program.

--- a/FrågesportNetCore/FrågesportNetCore.csproj
+++ b/FrågesportNetCore/FrågesportNetCore.csproj
@@ -43,6 +43,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="ActionHandler.cs" />
     <Compile Include="Deck.cs" />
     <Compile Include="FileManager.cs" />
     <Compile Include="MCSACard.cs" />
