WPF Filhantering - Command line UI now functional again. Class InterfaceHandler added. Project QuizLibrary added.

--- a/FrågesportNetCore/FrågesportNetCore.csproj
+++ b/FrågesportNetCore/FrågesportNetCore.csproj
@@ -32,6 +32,9 @@
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
+  <PropertyGroup>
+    <StartupObject />
+  </PropertyGroup>
   <ItemGroup>
     <Reference Include="System" />
     <Reference Include="System.Core" />
@@ -43,19 +46,20 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="ActionHandler.cs" />
-    <Compile Include="Deck.cs" />
-    <Compile Include="FileManager.cs" />
-    <Compile Include="MCSACard.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="QuestionCard.cs" />
-    <Compile Include="Quiz.cs" />
-    <Compile Include="UserInterface.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
-    <None Include="readme.md" />
+  </ItemGroup>
+  <ItemGroup>
+    <WCFMetadata Include="Connected Services\" />
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\QuizLibrary\QuizLibrary.csproj">
+      <Project>{810440fa-faec-480f-a2ad-6a0cc1f58a0b}</Project>
+      <Name>QuizLibrary</Name>
+    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
