--- a/QuizLibrary/QuizLibrary.csproj
+++ b/QuizLibrary/QuizLibrary.csproj
@@ -10,4 +10,8 @@
     <PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\Web_App\Web_App.Server\Web_App.Server.csproj" />
+  </ItemGroup>
+
 </Project>
